# zanka

./: AST.cpp  AST.h  CMakeLists.txt  Lex.cpp  Lex.h  Parse.cpp  Parse.h  Token_def.h  main.cpp
source/: Token_def.h  Type_def.h  main.cpp
source/ast/: AST.cpp  AST.h  AST_code_gen.cpp
source/code_gen/: code_gen.cpp  code_gen.h
source/parser/: Parse.cpp  Parse.h
source/parser/lexer/: Lex.cpp  Lex.h
source/table/: Table.cpp  Table.h
src/: Token_def.h  llvm_static_decl.h  main.cpp
src/ast/: AST.cpp  AST.h  AST_code_gen.cpp
src/parser/: Parse.cpp  Parse.h
src/parser/lexer/: Lex.h
test/: test.txt
